--- a/Project/css/main.css
+++ b/Project/css/main.css
@@ -8,15 +8,19 @@
     --bg-pale-orange: #FFF8F8;
 }
 
-
 /* start nav */
 
 nav{
     position: fixed;
-    background-color: #fff;
+    background-color: #ff8730;
     justify-content: space-between;
     box-shadow: 0px 0px 10px rgba(199, 199, 199, 0.5);
     font-family: var(--montserrat-font-family);
+}
+
+nav a{
+    text-decoration: none;
+    color: #ebebeb;
 }
 
 a{
